<resources>
    <string name="app_name">PlanetsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planet">Tierra</string>
    <string name="boton_text">Iniciar Sesión</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="selecciona_pais">Selecciona tu país</string>
    <string name="dummy_value">23</string>
    <string name="title_rotation">Periodo de Rotación</string>
    <string name="title_orbital">Periodo Orbital</string>
    <string name="title_diametro">Diametro</string>
    <string name="title_climate">Clima</string>
    <string name="title_gravity">Gravedad</string>
</resources>