<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Apellido Paterno -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilApePaterno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_paterno"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/ilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApePaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Apellido Materno -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilApMaterno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_materno"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/ilApePaterno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApMaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Fecha de nacimiento -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilFechaNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nacimiento"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/ilApMaterno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Pais -->
    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_pais"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toBottomOf="@id/ilFechaNacimiento"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spnPais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/countryLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Boton -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/boton_text"
        android:layout_marginTop="24dp"
        app:cornerRadius="12dp"
        android:enabled="true"
        app:layout_constraintTop_toBottomOf="@id/spnPais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
